force-app/main/default/objects/Order__c/fields/Bill_Width__c.field-meta.xml
<CustomField>
    <fullName>Bill_Width__c</fullName>
    <label>Bill Width</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>