force-app/main/default/objects/Order__c/fields/Customer_Received_Dock__c.field-meta.xml
<CustomField>
    <fullName>Customer_Received_Dock__c</fullName>
    <label>Customer Received Dock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>