force-app/main/default/objects/Order__c/fields/Finish_Width__c.field-meta.xml
<CustomField>
    <fullName>Finish_Width__c</fullName>
    <label>Finish Width</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>