force-app/main/default/objects/Order__c/fields/Mark_for_CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_CustomerCode__c</fullName>
    <label>Mark for CustomerCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>