force-app/main/default/objects/Order__c/fields/Order_NumberId__c.field-meta.xml
<CustomField>
    <fullName>Order_NumberId__c</fullName>
    <externalId>true</externalId>
    <label>Order NumberId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>