force-app/main/default/objects/Order__c/fields/Ship_Note__c.field-meta.xml
<CustomField>
    <fullName>Ship_Note__c</fullName>
    <label>Ship Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>