force-app/main/default/objects/Order__c/fields/Ship_VIA__c.field-meta.xml
<CustomField>
    <fullName>Ship_VIA__c</fullName>
    <label>Ship VIA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>