force-app/main/default/objects/Order__c/fields/Shipping_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_1__c</fullName>
    <label>Shipping Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>