force-app/main/default/objects/Order__c/fields/Taken_By__c.field-meta.xml
<CustomField>
    <fullName>Taken_By__c</fullName>
    <label>Taken By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>